# archcare

./: .gitignore  pyproject.toml
src/archcare/: __main__.py  cli.py
src/archcare/cli/: __init__.py  _state.py  app.py  container.py  context.py  interaction.py
src/archcare/cli/commands/: __init__.py  debug.py  logs.py  setup.py  task.py
src/archcare/cli/presenters/: __init__.py  debug_presenter.py  maintenance_presenter.py  setup_presenter.py  task_presenter.py
src/archcare/config/: __init__.py  ignored-services.toml  loader.py  models.py  settings.toml  tasks.toml
src/archcare/core/: __init__.py  executor.py  interaction.py  models.py  scheduler.py
src/archcare/services/: __init__.py  debug_service.py  exceptions.py  responses.py  setup_service.py  systemd.py  task_service.py
src/archcare/tasks/: __init__.py  base.py  failed_services.py  health_check.py  maintenance_check.py  mirrorlist_update.py
src/archcare/tests/: conftest.py
src/archcare/tests/unit/: test_executor.py  test_models.py  test_scheduler.py  test_setup_service.py  test_task_service.py
src/archcare/tests/unit/cli/: test_context.py
src/archcare/tests/unit/config/: test_loader.py  test_models.py
src/archcare/tests/unit/core/: test_executor.py  test_scheduler.py
src/archcare/tests/unit/services/: conftest.py  test_debug_service.py  test_setup_service.py  test_task_service.py
src/archcare/tests/unit/utils/: test_mirrorlist.py  test_system.py
src/archcare/utils/: __init__.py  hardware.py  logging.py  mirrorlist.py  notifications.py  output.py  pacman.py  system.py
