[project]
name = "archcare"
version = "0.1.0"
description = "A simple maintenance system for Arch Linux"
authors = [
    { name = "Shayan Moosavi", email = "moosavi.shayan@gmail.com" }
]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.12,<3.14.0"
dependencies = [
    "typer (>=0.21.1,<1.0.0)",
    "rich (>=15.0.0,<16.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "psutil (>=7.2.0,<8.0.0)",
    "tomli-w (>=1.2.0,<2.0.0)",
    "types-psutil (>=7.2.1.20260116,<8.0.0.0)",
]

[project.scripts]
archcare = "archcare.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "ruff (>=0.14.14,<0.15.0)",
    "black[d] (>=26.1.0,<27.0.0)",
    "nuitka (>=2.8.10,<3.0.0)",
    "patchelf (>=0.17.2.4,<0.18.0.0)",
]

[tool.black]
line-length = 88